--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="container py-2">
           <h4 class="lead">Buddhimattā Academy offers a digital technologies education offering classroom-ready online and unplugged resources.
             Drawing on decades of industrial experience in area of Cloud Computing and Artificial Intelligence, we provide support through teaching resources, 
-            professional learning, and curriculum guidance. Our we aim to empower the next generation with these technologies to make them 
+            professional learning, and curriculum guidance. Our aim to empower the next generation with these technologies to make them 
             independent and self-reliant and contribute to the humanity.
           </h4>
 
